--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "blog-app",
   "version": "1.0.0",
-  "description": "A simple Blog App",
+  "description": "A simple Blog post application using Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "Akash Chouhan",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.10",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.9.10"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
