Initial docker orchestration with mongodb with demo username and password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,34 @@
 version: '3.8'
 
 services:
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    command: [ "mongod", "--bind_ip", "0.0.0.0" ]
+    expose:
+      - "27017"
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+      - mongodb_config:/data/configdb
+    networks:
+      - app-network
+
   app:
     build: .
     container_name: blog-app
     ports:
       - "3000:3000"
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/mongodb?authSource=admin
+      - MONGODBURI=mongodb://root:password@mongo:27017/Blogapp?authSource=admin
     depends_on:
       - mongo
-    networks:
-      - app-network
-
-  mongo:
-    image: mongo:latest
-    container_name: mongo
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_USERNAME }}
-      - MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_PASSWORD }}
     volumes:
-      - mongodb_data:/data/db
+      - app_data:/app
     networks:
       - app-network
 
@@ -32,4 +38,8 @@ networks:
 
 volumes:
   mongodb_data:
+    driver: local
+  mongodb_config:
+    driver: local
+  app_data:
     driver: local
