--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Cache Docker layers
         uses: actions/cache@v3
