--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/kiii-blogApp:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogApp:latest
           secrets: |
             "SECRET_MONGODB_URI=${{ secrets.SECRET_MONGODB_URI }}"
             "SECRET_MONGODB_USERNAME=${{ secrets.SECRET_MONGODB_USERNAME }}"
