--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -40,6 +40,7 @@ jobs:
           echo "$MONGODB_URI" | docker secret create secret_mongodb_uri -
           echo "$MONGODB_USERNAME" | docker secret create secret_mongodb_username -
           echo "$MONGODB_PASSWORD" | docker secret create secret_mongodb_password -
+          docker secret ls
         env:
           MONGODB_URI: ${{ secrets.SECRET_MONGODB_URI }}
           MONGODB_USERNAME: ${{ secrets.SECRET_MONGODB_USERNAME }}
