Taking a few steps back, simple workflow without swarm

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,15 @@
 FROM node:16
 
+ARG MONGODBURI
+ENV MONGODBURI=$MONGODBURI
+
 WORKDIR /app
 
 COPY package*.json ./
 
 RUN npm install
 
-COPY . .
+COPY .. .
 
 EXPOSE 3000
 
