--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -31,28 +31,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Swarm
+      - name: Set up MongoDB container with GitHub secrets
         run: |
-          docker swarm init
+          docker run -d --name mongodb \
+            -e MONGO_INITDB_ROOT_USERNAME=${{ secrets.SECRET_MONGODB_USERNAME }} \
+            -e MONGO_INITDB_ROOT_PASSWORD=${{ secrets.SECRET_MONGODB_PASSWORD }} \
+            -p 27017:27017 mongo:latest
 
-      - name: Create Docker secrets from GitHub secrets
+      - name: Build Docker Image and Push to DockerHub
         run: |
-          echo "$MONGODB_URI" | docker secret create secret_mongodb_uri -
-          echo "$MONGODB_USERNAME" | docker secret create secret_mongodb_username -
-          echo "$MONGODB_PASSWORD" | docker secret create secret_mongodb_password -
-          docker secret ls
-        env:
-          MONGODB_URI: ${{ secrets.SECRET_MONGODB_URI }}
-          MONGODB_USERNAME: ${{ secrets.SECRET_MONGODB_USERNAME }}
-          MONGODB_PASSWORD: ${{ secrets.SECRET_MONGODB_PASSWORD }}
+          docker build --build-arg MONGODBURI=${{ secrets.SECRET_MONGODB_URI }} -t ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest
 
-      - name: Build Docker Compose services
+      - name: Deploy Docker Compose
         run: |
-          docker stack deploy -c docker-compose.yml mystack
-
-      - name: Push Docker Image to DockerHub
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest
+          docker-compose -f docker-compose.yml up -d
