Moving docker files to root

--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build Docker Image and Push to DockerHub
         run: |
-          docker build --build-arg MONGODBURI=${{ secrets.SECRET_MONGODB_URI }} -t ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest ./docker
+          docker build --build-arg MONGODBURI=${{ secrets.SECRET_MONGODB_URI }} -t ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest
 
       - name: Deploy Docker Compose
