--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -13,6 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      MONGODB_USERNAME: ${{ secrets.SECRET_MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.SECRET_MONGODB_PASSWORD }}
+      MONGODB_URI: ${{ secrets.SECRET_MONGODB_URI }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
