--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
-    command: ["mongod", "--bind_ip", "0.0.0.0"]
+    expose:
+      - "27017"
     ports:
       - "27017:27017"
     volumes:
@@ -15,6 +16,7 @@ services:
       - mongodb_config:/data/configdb
     networks:
       - app_network
+    command: [ "mongod", "--bind_ip", "0.0.0.0" ]
 
   app:
     build: .
