--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -1,13 +1,10 @@
 name: Build and Deploy Docker Image
 
 on:
-  push:
-    branches:
-      - master
-#  workflow_run:
-#    workflows: ["workflow name"]
-#    types:
-#      - completed
+  workflow_run:
+    workflows: ["Test Docker Compose Orchestration"]
+    types:
+      - completed
 
 jobs:
   build:
@@ -20,15 +17,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -40,7 +32,3 @@ jobs:
         run: |
           docker build --build-arg MONGODBURI=${{ secrets.SECRET_MONGODB_URI }} -t ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/kiii-blogapp:latest
-
-      - name: Deploy Docker Compose
-        run: |
-          docker-compose -f docker-compose.yml up -d --build
