--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --runInBand"
   },
   "author": "Akash Chouhan",
   "license": "ISC",
@@ -15,8 +16,11 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "jest": "^29.7.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.20"
+    "mongodb-memory-server": "^10.1.2",
+    "mongoose": "^5.13.20",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
