--- a/.github/workflows/test-node-app.yml
+++ b/.github/workflows/test-node-app.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'npm'
 
       - name: Install Node.js dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests
         env:
