--- a/.github/workflows/build-and-push-to-dockerhub.yml
+++ b/.github/workflows/build-and-push-to-dockerhub.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Docker Image
 
 on:
   workflow_run:
-    workflows: ["Test Node.js Application and Docker-Compose"]
+    workflows: ["Test Application and Docker Compose"]
     types:
       - success
 
