--- a/.github/workflows/test-build-and-push.yml
+++ b/.github/workflows/test-build-and-push.yml
@@ -71,6 +71,9 @@ jobs:
     timeout-minutes: 30
 
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
