--- a/kubernetes/app-argocd.yaml
+++ b/kubernetes/app-argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app
+  name: blogapp
   namespace: argocd
 spec:
   project: default
